style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
}

body {
    background-color: #000;
    overflow: hidden
}

header {
    width: 100%;
    height: 100px;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
    /* margin: auto; */
}

.logo img {
    margin-left: 40px;
    width: 140px;
}

.hamburger {
    display: none;
}

.nav-bar ul {
    display: flex;
}

.nav-bar ul li a {
    display: block;
    color: #000;
    font-size: 20px;
    padding: 8px 16px;
    cursor: pointer;
}

.social-icon {
    display: flex;
    gap: 1rem;
}

/* Home section Style */
#home {
    display: flex;
    flex-direction: row;
    margin: 2% 7%;
    color: white;
}

.intro {
    margin-top: 60px;

}

.heading {
    font-size: 75px;

}

.discription {
    margin-top: 15px;
}

.button {
    margin-top: 25px;
    background-color: #454545;
    display: flex;
    flex-direction: row;
    width: 220px;
    border-radius: 30px;
    height: 45px;
    /* align-items: center;
    justify-content: center; */
}

.camera-head {
    position: relative;
    top: 12px;
    /* right: 15px; */
    left: 20px;

}

.camera-icon {
    position: relative;
    top: 9px;
    left: 45px;
}

.icon-bgcolor {
    background-color: #ff6000;
    height: 57px;
    width: 57px;
    position: relative;
    top: 77px;
    left: 132px;
    border-radius: 50px;
}

